edits for /describe stage integrations - version update
